--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 <h3>Make sure to apply following settings</h3>
 
-<p>Go to <code>Admin-&gt;Settings-&gt;</code> Check <code>Count the number of question views</code> &amp; <code>Show view count in question lists</code></p>
+<p>Go to <code>Admin-&gt;Viewing-&gt;</code> Check <code>Count the number of question views</code> &amp; <code>Show view count in question lists</code></p>
 
 <h2>Author</h2>
 
